gnome-control-center 2.6.1

Chris Lahey:
    * Fix ordering of themes in theme manager
    * Fix sizing of svg backgrounds

Jody:
    http://bugzilla.gnome.org/show_bug.cgi?id=139190
    * Fix uniqueness test for binding special keys with no name
    * Fix theme manager selection when not running metacity

Padraig O'Briain:
    http://bugzilla.gnome.org/show_bug.cgi?id=131538.

------------------------------------------------------------------------------
gnome-control-center 2.6.0.3

Jody:
    http://bugzilla.gnome.org/show_bug.cgi?id=138701
    * Fix typo
    * Fix uniqueness test for keybindings
    * Merge in some build fixes for sun's forte and Irix

------------------------------------------------------------------------------
gnome-control-center 2.5.4

Dennis Cranston :
    http://bugzilla.gnome.org/show_bug.cgi?id=133715
    * Improve layout of display capplet

Alexander Winston :
	http://bugzilla.gnome.org/show_bug.cgi?id=133214
	* quote the AC_DEFUN properly

Jody :
	http://bugzilla.gnome.org/show_bug.cgi?id=124064
	* Add a test for ngettext
	* Delete some of the unused file cluttering the tree
	http://bugzilla.gnome.org/show_bug.cgi?id=134446
	* Trivial string consistency adjustment
	http://bugzilla.gnome.org/show_bug.cgi?id=128164
	* Handle sorted trees
	* Fix incorrect string in gnome-settings-daemon

Muktha Narayan :
	http://bugzilla.gnome.org/show_bug.cgi?id=124032
	* Do not popup the logout dialog when the close button (X)

Jan Arne Petersen :
	* Move a few capplets to the new file selector

Padraig O'Briain :
	* Fix the ATK relations for the file-type capplet

Julio M. Merino Vidal :
	* Make fontilus and themus respect the gconf install settings

Rodney Dawes:
	http://bugzilla.gnome.org/show_bug.cgi?id=134171
	* Fix transtions for titles of colour pickers.

Kaushal Kumar:
	http://bugzilla.gnome.org/show_bug.cgi?id=109091
	* Warn before deleting a type

Richard Hult:
	* Improve Dr Wright.

msuarezalvarez@arnet.com.ar :