@@ -1,3 +1,8 @@
+2004-04-07  Jody Goldberg <jody@gnome.org>
+
+	http://bugzilla.gnome.org/show_bug.cgi?id=130623
+	* capplet-util.c (capplet_set_icon) : respect the icon theme
+
 2004-04-01  Jody Goldberg <jody@gnome.org>
 
 	* Release 2.6.0.3
