@@ -4,6 +4,9 @@ Chris Lahey:
     * Fix ordering of themes in theme manager
     * Fix sizing of svg backgrounds
 
+Glynn:
+    * Toplevel window icons should use the icon themes
+
 Jody:
     http://bugzilla.gnome.org/show_bug.cgi?id=139190
     * Fix uniqueness test for binding special keys with no name
